deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  labels:
    app: core-api
spec:
  selector:
    matchLabels:
      app: core-api
      tier: web
  template:
    metadata:
      labels:
        app: core-api
        tier: web
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: core-api
          image: europe-west4-docker.pkg.dev/pas-shared/pas/core-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 1
              memory: 5G
            limits:
              cpu: 3
              memory: 7.5G
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 30
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.17.1
          args:
            - "--private-ip"
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=5432"
          securityContext:
            runAsNonRoot: true
