deployment/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3000":"frontend-backend-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: frontend
    tier: web
  ports:
    - port: 3000
